# StreamVault

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: style.css
assets/logo/: AppIcon.icns  log_vector_small_empty.eps
docs/improver/: architecture-map.md  baseline-tests.md  changelog.md  findings.md  report.md  stack-profile.md  verification.md
docs/plans/: 2026-02-21-codebase-improvement.md  2026-02-22-codebase-improvement.md
resources/: AppIcon.icns  Info.plist
scripts/: package.sh
src/: app.rs  config.rs  gui.rs  main.rs  providers.rs  search.rs  style.rs  util.rs
src/config/: settings.rs
src/download/: engine.rs  mod.rs  progress.rs
src/gui/: app.rs  details.rs  downloads.rs  helpers.rs  home.rs  messages.rs  mod.rs  navbar.rs  player.rs  search_view.rs  style.rs
src/gui/screens/: details.rs  downloads.rs  home.rs  mod.rs  player.rs  search.rs  settings.rs
src/playback/: mod.rs  native_player.rs  player.rs
src/provider/: mod.rs  models.rs  streaming_community.rs  traits.rs  vixcloud.rs
src/providers/: animeunity.rs  aurora.rs  mod.rs  models.rs  nove.rs  raiplay.rs  streaming_community.rs
src/util/: binary.rs  mod.rs
