[package]
name = "streamvault"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
scraper = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
url = { version = "2", features = ["serde"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
