[package]
name = "streamvault"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
dirs = "6"
regex = "1"
scraper = "0.25"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
url = { version = "2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
dioxus = { version = "0.6", features = ["desktop"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
