[package]
name = "streamvault"
version = "1.0.2"
edition = "2021"

[dependencies]
dirs = "6"
regex = "1"
scraper = "0.25"
serde_json = "1"
async-trait = "0.1"
unicode-normalization = "0.1.25"
uuid = { version = "1", features = ["v4"] }
url = { version = "2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
dioxus = { version = "0.7", features = ["desktop"] }
dioxus-desktop = { version = "0.7", features = ["fullscreen"] }
reqwest = { version = "0.13", features = ["json", "cookies", "query"] }
